# tax-flow

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
.github/workflows/: docs.yml  sanitizers.yml  tests.yml
benchmarks/: CMakeLists.txt  bench_ads_refine.cpp  bench_ode_cr3bp.cpp
benchmarks/baseline/: MISSING.md  main-5965527-univariate.txt
cmake/: tax-flowConfig.cmake.in
docs/: index.md
docs/ads/: api.md  index.md  polynomial_zonotope.md  refine.md  zonotope.md
docs/benchmarks/: 2026-05-21-stage2a-cr3bp.md
docs/combined_report/: build.sh  combined_report.md
docs/domain/: index.md  polynomial_zonotope.md  zonotope.md
docs/javascripts/: mathjax.js
docs/missed_thrust_onoff_report/: build.sh  missed_thrust_onoff_report.md
docs/ode/: api.md  events.md  examples.md  index.md  math.md  methods.md  taylor_models.md
docs/reachability_report/: build.sh  reachability_report.md
docs/reviews/ads-domain-interface/: README.md  mc_validate.py
docs/reviews/library-status-2026-07/: README.md
docs/tutorials/: conjunction.md  hyperbola.md  index.md  missed_thrust.md  missed_thrust_onoff.md  missed_thrust_reachable.md  polynomial_zonotope.md  reachability.md  three_body.md  transfer_dispersion.md  two_body.md  two_body_refine.md  two_body_taylor_model.md
examples/: CMakeLists.txt
examples/common/: output.hpp
examples/conjunction/: collision_probability.cpp
examples/flyby/: common.hpp  flyby.cpp
examples/hyperbola/: bplane_ads.cpp  bplane_taylor.cpp  common.hpp  snapshots.cpp
examples/missed_thrust/: common.hpp  missed_thrust.cpp  plot.py
examples/missed_thrust_onoff/: common.hpp  missed_thrust_onoff.cpp  plot.py
examples/missed_thrust_reachable/: common.hpp  missed_thrust_reachable.cpp  plot.py
examples/plot/: plot_conjunction.py  plot_hyperbola_bplane.py  plot_hyperbola_snapshots.py  plot_representations.py  plot_three_body.py  plot_two_body.py  plot_two_body_cpz.py  plot_two_body_mc.py  plot_two_body_poly_zonotope.py  plot_two_body_taylor_model.py  plot_two_body_zonotope.py  plot_two_body_zonotope_adaptive.py
examples/reachability/: common.hpp  plot.py  reachability.cpp
examples/three_body/: ads.cpp  common.hpp  loads.cpp  plot.py  taylor.cpp
examples/transfer_dispersion/: common.hpp  plot.py  transfer_dispersion.cpp
examples/transfer_dispersion/design/: README.md  design_plots.py  finite_burn.py  porkchop.py
examples/two_body/: ads.cpp  common.hpp  cpz.cpp  loads.cpp  plot.py  plot_refine.py  plot_validation.py  poly_zonotope.cpp  polynomial_zonotope.cpp  refine.cpp  taylor.cpp  taylor_model.cpp  validation.cpp  zonotope.cpp  zonotope_adaptive.cpp
examples/wsb/: ads.cpp  common.hpp  plot_box.py  plot_search.py  taylor.cpp  wsb_search.cpp
examples/zonotope/: representations.cpp  two_body_mc.cpp
include/tax/: ads.hpp  domain.hpp  ode.hpp  sgp4.hpp
include/tax/ads/: box.hpp  cpz.hpp  criteria.hpp  da_state.hpp  driver.hpp  io.hpp  leaf.hpp  merge.hpp  model.hpp  nonlinearity_index.hpp  poly_zonotope.hpp  propagate.hpp  refine.hpp  refine_criteria.hpp  reorient.hpp  solution.hpp  split_criteria.hpp  split_event.hpp  tree.hpp  zonotope.hpp
include/tax/ads/detail/: model_state.hpp  nonlinearity_index.hpp  state_traits.hpp  work_pool.hpp
include/tax/ads/domains/: box.hpp  domain.hpp  polynomial_zonotope.hpp  reorient.hpp  zonotope.hpp
include/tax/domain/: box.hpp  create.hpp  domain.hpp  ellipsoid.hpp  enclosure.hpp  model.hpp  polynomial_zonotope.hpp  reorient.hpp  zonotope.hpp
include/tax/domain/detail/: substitute_axis.hpp
include/tax/ode/: actions.hpp  aliases.hpp  concepts.hpp  config.hpp  controllers.hpp  event.hpp  integrator.hpp  io.hpp  named.hpp  propagate.hpp  solution.hpp  step_evaluator.hpp  step_result.hpp  triggers.hpp  vector_ops.hpp
include/tax/ode/detail/: adaptive_rk_step.hpp  brent_root.hpp  dormand_prince_tableaus.hpp  embedded_rk_stepper.hpp  feagin_tableaus.hpp  fehlberg_tableaus.hpp  hermite_interp.hpp  verner_tableaus.hpp
include/tax/ode/events/: grid_event.hpp  root_finding_event.hpp  step_event.hpp
include/tax/ode/steppers/: dormand_prince45.hpp  feagin12.hpp  feagin14.hpp  fehlberg78.hpp  taylor.hpp  taylor_model.hpp  verner67.hpp  verner78.hpp  verner89.hpp
include/tax/sgp4/: elset_rec.hpp  gravconst.hpp  satellite.hpp  tle.hpp
include/tax/sgp4/detail/: deep_space.hpp  scalar.hpp  sgp4_core.hpp  time.hpp
paper/: .gitignore  README.md  main.tex  references.bib
paper/figures/: make_figures.py
tests/: CMakeLists.txt  testUtils.hpp
tests/ads/: test_ads_snapshots.cpp  test_ads_solution.cpp  test_box.cpp  test_cpz.cpp  test_criteria.cpp  test_da_state.cpp  test_driver.cpp  test_leaf_tree.cpp  test_merge.cpp  test_model.cpp  test_nonlinearity_index.cpp  test_parallel.cpp  test_poly_zonotope.cpp  test_polynomial_zonotope.cpp  test_refine.cpp  test_reorient.cpp  test_split_event.cpp  test_zonotope.cpp
tests/domain/: test_box.cpp  test_enclosure.cpp  test_localize_evaluate.cpp  test_model.cpp  test_polynomial_zonotope.cpp  test_reorient.cpp  test_soundness.cpp  test_zonotope.cpp
tests/ode/: CMakeLists.txt  test_concepts.cpp  test_config.cpp  test_controllers.cpp  test_fixed_step.cpp  test_mixed_state.cpp  test_named_state.cpp  test_rk_da_state.cpp  test_rk_helpers.cpp  test_solution.cpp  test_vector_ops.cpp
tests/ode/events/: test_every_step.cpp  test_grid_event.cpp  test_step_evaluator.cpp  test_zero_crossing.cpp
tests/ode/integrator/: test_basic.cpp  test_dense.cpp  test_save_steps.cpp  test_static.cpp
tests/ode/problems/: cr3bp_problem.hpp  test_cr3bp_events.cpp  test_cr3bp_propagation.cpp  test_two_body_kepler.cpp
tests/ode/steppers/: test_dormand_prince45.cpp  test_feagin12.cpp  test_feagin14.cpp  test_fehlberg78.cpp  test_taylor.cpp  test_taylor_model.cpp  test_verner67.cpp  test_verner78.cpp  test_verner89.cpp
tests/sgp4/: CMakeLists.txt  test_sgp4_taylor.cpp  test_sgp4_tle.cpp  test_sgp4_vallado.cpp
